# fp4-fused-attention-sm120

./: .gitignore  CMakeLists.txt  README.md  common.h
tests/: benchmark.cu  test_attention.cu  test_fp4.cu
